# android-irrlicht

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/irrlicht/: MainActivity.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
